--- a/.github/workflows/realse-package.yml
+++ b/.github/workflows/realse-package.yml
@@ -1,35 +1,44 @@
 name: React.js Package
 
-on: 
+on:
   release:
     types: [created]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
+
+    steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 18
 
       - run: npm ci
-      - run: npm latest
 
-  publish-gpr: 
+      - run: npm run build
+
+  publish-gpr:
     needs: build
     runs-on: ubuntu-latest
-    permissions: 
-      package: write
+
+    permissions:
       contents: read
-    steps: 
+      packages: write
+
+    steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+
+      - name: Set up Node.js with registry
+        uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 18
           registry-url: https://npm.pkg.github.com/
 
       - run: npm ci
+
       - run: npm publish
-      - env: 
-        NODE_AUTH_TOKEN: ${{secrets.SECRET_TOKEN}}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.SECRET_TOKEN }}
